--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "single page application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --open --mode development"
   },
-  "keywords": [
-    "javascript"
-  ],
+  "keywords": ["javascript"],
   "author": "Luis Moran",
   "license": "MIT",
   "devDependencies": {
